<resources>
    <string name="app_name">Project2</string>
    <string name="appTitle">STOCKET</string>
    <string name="password">Password:</string>
    <string name="logo">Stocket logo</string>
    <string name="username">Username:</string>
    <string name="Button">Register</string>
    <string name="registerButton">Register</string>
    <string name="loginButton">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="_0">0</string>
    <string name="updated">Updated:</string>
    <string name="item_number_123456">Item Number: 123456</string>
    <string name="item_name_oooooooooooooooo">Item Name: OOOOOOOOOOOOOOOO</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="zeroes">Zeroes</string>
    <string name="sms">sms</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="would_you_like_to_recieve_sms_messages">Would you like to receive sms messages?</string>
    <string name="import_image">Import Image</string>
    <string name="itemnumber">Item Number*</string>
    <string name="itemName">Item Name*</string>
    <string name="itemQuantity">Quantity*</string>
    <string name="add_item">Add Item</string>
    <string name="image">image</string>
    <string name="back">Back</string>
    <string name="prompt_itemNumber">Item Number*</string>
    <string name="item_number">Item Number:</string>
    <string name="item_name">Item Name:</string>
    <string name="item_quantity">Quantity:</string>
    <string name="Submit">Submit</string>
    <string name="allow_camera_access">Allow Camera Access?</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="submit">Submit</string>
</resources>