<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CB905E"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/stockTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:fontFamily="@font/caprasimo"
        android:text="@string/appTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#733A15"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="303dp"
        android:layout_height="272dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/stockTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/screenshot_41" />

    <EditText
        android:id="@+id/editUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:height="48dp"
        android:autofillHints=""
        android:background="@drawable/edittextborder"
        android:ems="10"
        android:fontFamily="@font/caprasimo"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="5dp"
        android:textColorHint="#CCB3A4"
        android:tooltipText="Lol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockTitle" />

    <EditText
        android:id="@+id/editPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:height="48dp"
        android:autofillHints=""
        android:background="@drawable/edittextborder"
        android:ems="10"
        android:fontFamily="@font/caprasimo"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColorHint="#CCB3A4"
        android:tooltipText="Lol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockTitle" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#723A15"
        android:fontFamily="@font/caprasimo"
        android:text="@string/registerButton"

        android:textColorLink="#CE2020"
        app:layout_constraintEnd_toEndOf="@+id/editPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordText" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#723A15"
        android:fontFamily="@font/caprasimo"
        android:text="@string/back"

        android:textColorLink="#CE2020"
        app:layout_constraintEnd_toStartOf="@+id/registerButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordText" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="88dp"
        android:background="@android:color/transparent"
        android:text="@string/forgotPassword"
        android:fontFamily="@font/caprasimo"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordText"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>