<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stockTitle">


            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/caprasimo"
                    android:maxLines="1"
                    android:text="@string/item_name_oooooooooooooooo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_number"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/caprasimo"
                    android:maxLines="1"
                    android:text="@string/item_number_123456" />


            </LinearLayout>

            <TextView
                android:fontFamily="@font/caprasimo"
                android:hint="@string/_0"
                android:id="@+id/item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:autofillHints=""
                android:ems="5"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button_delete"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1.3"
                android:backgroundTint="#FA6969"
                android:fontFamily="@font/caprasimo"
                android:text="@string/delete"
                android:textColor="#4E342E"
                tools:ignore="TextContrastCheck,TextContrastCheck,VisualLintButtonSize" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>

